--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nativecustomwebview",
   "widgetName": "NativeCustomWebView",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Native custom web view",
   "copyright": "ITvisors 2021",
   "author": "Marcel Groeneweg",
@@ -23,12 +23,12 @@
     "url": "https://github.com/Marcel Groeneweg/nativecustomwebview/issues"
   },
   "devDependencies": {
-    "@mendix/pluggable-widgets-tools": "^9.5.4",
+    "@mendix/pluggable-widgets-tools": "^9.13.1",
     "@types/big.js": "^6.0.2",
     "@types/react": "~17.0.1",
     "@types/react-native": "~0.63.52"
   },
   "dependencies": {
-    "react-native-webview": "8.1.2"
+    "react-native-webview": "^11.2.1"
   }
 }
